# vxl

./: CMakeLists.txt  README.md
config/cmake/export/: VXLCreateProject.cmake
core/: CMakeLists.txt
core/examples/vnl_calc/: CMakeLists.txt
core/testlib/: CMakeLists.txt  testlib_root_dir.cxx
core/vgl/: CMakeLists.txt
core/vgl/algo/: vgl_h_matrix_2d_optimize_lmq.cxx  vgl_h_matrix_3d.hxx
core/vgl/tests/: CMakeLists.txt  test_driver.cxx
core/vnl/: CMakeLists.txt  vnl_matrix.h  vnl_matrix_fixed.h  vnl_sse.h  vnl_vector.h
core/vnl/examples/: CMakeLists.txt
core/vnl/io/: CMakeLists.txt
core/vpgl/: CMakeLists.txt  vpgl_calibration_matrix.hxx  vpgl_camera.h  vpgl_generic_camera.h  vpgl_lens_distortion.h  vpgl_local_rational_camera.h  vpgl_lvcs.cxx  vpgl_lvcs.h  vpgl_perspective_camera.h  vpgl_perspective_camera.hxx  vpgl_proj_camera.h  vpgl_proj_camera.hxx  vpgl_rational_camera.h  vpgl_rational_camera.hxx
core/vpgl/algo/: CMakeLists.txt  vpgl_backproject.cxx  vpgl_backproject.h  vpgl_camera_compute.cxx  vpgl_camera_convert.cxx  vpgl_camera_convert.h  vpgl_invmap_cost_function.cxx  vpgl_ray.cxx  vpgl_ray.h
core/vpgl/algo/examples/: CMakeLists.txt  vpgl_synth_bundle_adjust.cxx
core/vpgl/algo/tests/: CMakeLists.txt  test_driver.cxx  test_include.cxx
core/vpgl/file_formats/: CMakeLists.txt  vpgl_geo_camera.cxx
core/vpgl/io/: vpgl_io_lvcs.cxx  vpgl_io_lvcs.h
core/vpgl/tests/: CMakeLists.txt  test_driver.cxx  test_include.cxx  test_perspective_camera.cxx  test_rational_camera.cxx  test_template_include.cxx
core/vpl/: CMakeLists.txt
test/: CMakeLists.txt
test/testlib/: testlib_test.h
v3p/: CMakeLists.txt
v3p/clipper/: clipper.cpp
v3p/netlib/linalg/: lsmrBase.cxx  lsmrDense.cxx  lsqrDense.cxx
vxl/: vgl.h
vxl/vgl/: vgl_line_segment_2d.h  vgl_point_2d.h  vgl_point_2d.hxx  vgl_tolerance.h
vxl/vgl/old_src/: CMakeLists.txt  vgl_homg_point_3d.h  vgl_homg_point_3d.hxx  vgl_tolerance.h  vgl_vector_3d.hxx
vxl/vgl/old_src/algo/: vgl_h_matrix_1d.hxx  vgl_h_matrix_2d.hxx
vxl/vgl/test/: test_line_segment_3d.cxx  test_point.cxx
